--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,7 @@
 /* code here  */
 .redColor{
     color: red;
+    font-size: 30px;
 
 
 }
@@ -8,5 +9,6 @@
 .blueColor{
     color: blue;
     font-style: italic;
+    font-size: 30px;
 
 }
